Configuração do material

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,8 @@
 <p>login works!</p>
-<!-- <div>
+
+<div>
     <p>
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="outline">
           <mat-label>Fill form field</mat-label>
           <input matInput placeholder="Placeholder">
           <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
@@ -16,4 +17,4 @@
           <mat-hint>Hint</mat-hint>
         </mat-form-field>
       </p>
-</div> -->
+</div>
