--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,22 @@
-.example-spacer {
+.teatime-spacer {
   flex: 1 1 auto;
+}
+
+.teatime-sidenav-content {
+  display: flex;
+  height: calc(100vh - 64px);
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  // background: rgb(180, 106, 210);
+  background: darkorchid;
+}
+
+.teatime-sidenav-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: darkorchid;
+  width: 20%;
 }
