--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,8 +5,8 @@
 .teatime-sidenav-content {
   display: flex;
   height: calc(100vh - 64px);
-  align-items: center;
-  justify-content: center;
+  // align-items: center;
+  // justify-content: center;
   flex-direction: column;
   // background: rgb(180, 106, 210);
   background: darkorchid;
