--- a/src/app/component/produto-input/produto-input.component.html
+++ b/src/app/component/produto-input/produto-input.component.html
@@ -7,6 +7,7 @@
       required
       [matAutocomplete]="auto"
       [formControl]="stateCtrl"
+      (change)="onChange($event)"
     />
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" (optionSelected)="selecionaProduto($event.option.value)">
       <mat-option *ngFor="let prod of filteredProdutos | async;"  [value]="prod">
