--- a/src/app/produto/baixar-estoque/baixar-estoque.component.html
+++ b/src/app/produto/baixar-estoque/baixar-estoque.component.html
@@ -1,46 +1,51 @@
 <div class="center-div">
-    <h1>Baixar Estoque</h1>
-  
-    <form class="baixar-estoque-form" (onSubmit)="onSubmit()">
-      <div class="produto-input">
-        <app-produto-input
-          (produtoSelecionadoEvent)="selecionaProduto($event)"
-          ></app-produto-input>
-      </div>
+  <h1>Baixar Estoque</h1>
 
-      <div class="actions">
-        <button mat-button (click)="buscarItensProduto()">
-          Buscar itens
-        </button>
-      </div>
+  <form class="baixar-estoque-form" (onSubmit)="onSubmit()">
+    <div class="produto-input">
+      <app-produto-input
+        (produtoSelecionadoEvent)="selecionaProduto($event)"
+      ></app-produto-input>
+    </div>
 
-      <div class="form-fields">
-        <mat-selection-list #itens [multiple]="false" (selectionChange)="getItemSelecionado(itens.selectedOptions.selected)">
-          <mat-list-option *ngFor="let item of produtoItens" [value]="item">{{item.lote}} - {{item.quantidade}}</mat-list-option>
-        </mat-selection-list>
-      </div>
+    <div class="actions">
+      <button mat-button (click)="buscarItensProduto()">Buscar itens</button>
+    </div>
 
-      <br/>
+    <div class="form-fields">
+      <mat-selection-list
+        #itens
+        [multiple]="false"
+        (selectionChange)="getItemSelecionado(itens.selectedOptions.selected)"
+      >
+        <mat-list-option *ngFor="let item of produtoItens" [value]="item">
+          <div>
+            <span>{{ item.lote }}</span> <span>{{ item.dataValidade | date: 'dd/MM/yyyy' }}</span> <span>{{ item.quantidade }}</span>
+          </div>
+        </mat-list-option>
+      </mat-selection-list>
+    </div>
 
-      <div class="form-fields">
-        <mat-form-field appearance="outline" >
-          <mat-label>Quantidade</mat-label>
-          <input
-            type="number"
-            color="primary"
-            matInput
-            [(ngModel)]="produtoItem.qtd"
-            name="produtoItem.qtd"
-            required
-          />
-        </mat-form-field>
-      </div>
+    <br />
 
-      <div class="actions">
-        <button mat-flat-button color="primary" (click)="onSubmit()">
-          Salvar
-        </button>
-      </div>
+    <div class="form-fields">
+      <mat-form-field appearance="outline">
+        <mat-label>Quantidade</mat-label>
+        <input
+          type="number"
+          color="primary"
+          matInput
+          [(ngModel)]="produtoItem.qtd"
+          name="produtoItem.qtd"
+          required
+        />
+      </mat-form-field>
+    </div>
 
-    </form>
+    <div class="actions">
+      <button mat-flat-button color="primary" (click)="onSubmit()">
+        Salvar
+      </button>
+    </div>
+  </form>
 </div>
