--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -48,7 +48,7 @@
 
     <ng-container matColumnDef="dataValidade">
       <th mat-header-cell *matHeaderCellDef>Validade</th>
-      <td mat-cell *matCellDef="let element">{{ element.dataValidade }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.dataValidade | date: 'dd/MM/yyyy' }}</td>
     </ng-container>
 
     <ng-container matColumnDef="star" stickyEnd>
