--- a/src/app/produto/novo-produto-dialog/novo-produto-dialog.component.html
+++ b/src/app/produto/novo-produto-dialog/novo-produto-dialog.component.html
@@ -52,6 +52,6 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button (click)="fecharModal()">Cancelar</button>
+  <button mat-button (click)="cancelar()">Cancelar</button>
   <button mat-button cdkFocusInitial (click)="onSubmit()">Salvar</button>
 </mat-dialog-actions>
