Ajustando o componente de produto.

--- a/src/app/component/produto-input/produto-input.component.html
+++ b/src/app/component/produto-input/produto-input.component.html
@@ -1,5 +1,5 @@
 <form class="example-form">
-  <mat-form-field class="example-full-width">
+  <mat-form-field class="example-full-width" appearance="outline" >
     <mat-label>Produtos</mat-label>
     <input
       matInput
