adicionando telas de tipo

--- a/src/app/estoque/receber-estoque-dialog/receber-estoque-dialog.component.html
+++ b/src/app/estoque/receber-estoque-dialog/receber-estoque-dialog.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-content>
-  <h2 mat-dialog-title>Receber estoque</h2>
+  <h2 mat-dialog-title>Receber Estoque</h2>
 
   <form class="recebimento-form" (onSubmit)="onSubmit()">
     <div class="form-fields">
