--- a/src/app/estoque/transferir-estoque-dialog/transferir-estoque-dialog.component.html
+++ b/src/app/estoque/transferir-estoque-dialog/transferir-estoque-dialog.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-content>
-  <h2 mat-dialog-title>Transferir estoque</h2>
+  <h2 mat-dialog-title>Transferir Estoque</h2>
 
   <form class="transferencia-form" (onSubmit)="onSubmit()">
     <div class="form-fields">
