--- a/src/app/cadastro/especie-produto/especie-produto.component.html
+++ b/src/app/cadastro/especie-produto/especie-produto.component.html
@@ -1,1 +1,55 @@
-<p>especie-produto works!</p>
+<h1>Espécie De Produto</h1>
+
+<div class="menu-botoes">
+  <button mat-flat-button color="primary" (click)="incluir()">
+    Criar espécie de produto
+  </button>
+</div>
+
+<div class="center-table">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>Id</th>
+      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="nome">
+      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="prefixo">
+        <th mat-header-cell *matHeaderCellDef>Prefixo</th>
+        <td mat-cell *matCellDef="let element">{{ element.prefixo }}</td>
+      </ng-container>
+
+    <ng-container matColumnDef="star" stickyEnd>
+      <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+      <td mat-cell *matCellDef="let element">
+        <button
+          mat-icon-button
+          [matMenuTriggerFor]="menu"
+          aria-label="Open menu"
+        >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item (click)="apagar(element)">
+            <mat-icon>delete</mat-icon>
+            <span>Apagar</span>
+          </button>
+          <button mat-menu-item (click)="editar(element)">
+            <mat-icon>edit</mat-icon>
+            <span>Atualizar</span>
+          </button>
+        </mat-menu>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
