--- a/src/app/estoque/estoque.component.html
+++ b/src/app/estoque/estoque.component.html
@@ -1,5 +1,5 @@
 
-<h1>Estoque por unidade</h1>
+<h1>Estoque Por Unidade</h1>
 
 <div class="menu-botoes">
   <button mat-flat-button color="primary" (click)="receber()">
