--- a/src/app/component/tree-menu/tree-menu.component.html
+++ b/src/app/component/tree-menu/tree-menu.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   <p>MENU</p>
 </div>
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" style="background-color: darkorchid;">
+<mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
     <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding class="mat-tree-menu-item">
       <button mat-button (click)="abrir(node.link)">{{node.name}}</button>
       <!-- <a mat-link routerLink="node.link">{{node.name}}</a> -->
