--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+@include mat.core();
+
+$myapp-theme-primary: mat.m2-define-palette(mat.$m2-teal-palette, 800);
+$myapp-theme-accent: mat.m2-define-palette(mat.$m2-teal-palette, A200);
+$myapp-theme-warn: mat.m2-define-palette(mat.$m2-red-palette);
+$myapp-theme-background: mat.m2-define-palette(mat.$m2-teal-palette, 200);
+
+$myapp-theme: mat.m2-define-light-theme((
+  color: (
+    primary: $myapp-theme-primary,
+    accent: $myapp-theme-accent,
+    warn: $myapp-theme-warn,
+    background-color: $myapp-theme-background,
+  )
+));
+
+@include mat.all-component-themes($myapp-theme);
 
 html,
 body {
