--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -6,8 +6,15 @@
   </button>
 </div>
 
+<div class="center-filter">
+  <mat-form-field appearance="outline">
+    <mat-label>Filtrar</mat-label>
+    <input matInput (keyup)="filtrar($event)" placeholder="Ex. nome do produto" #input>
+  </mat-form-field>  
+</div>
+
 <div class="center-table">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
     <ng-container matColumnDef="id" hidden>
       <th mat-header-cell *matHeaderCellDef>ID</th>
       <td mat-cell *matCellDef="let element">{{ element.idProduto }}</td>
@@ -15,7 +22,7 @@
 
     <!-- Position Column -->
     <ng-container matColumnDef="codigo">
-      <th mat-header-cell *matHeaderCellDef>Código</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Código</th>
       <td mat-cell *matCellDef="let element">{{ element.codigo }}</td>
     </ng-container>
 
@@ -59,7 +66,7 @@
           [matMenuTriggerFor]="menu"
           aria-label="Open menu"
         >
-          <mat-icon>more_vert</mat-icon>
+          <mat-icon class="mat-primary">more_vert</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
           <button mat-menu-item (click)="apagar(element)">
@@ -76,5 +83,10 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">Não foi possível encontrar registros correspondente ao filtro utilizado. Filtro:"{{input.value}}"</td>
+    </tr>
   </table>
+
 </div>
