--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,22 @@
 @use '@angular/material' as mat;
 @include mat.core();
 
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+// Defina as paletas de cores
 $myapp-theme-primary: mat.m2-define-palette(mat.$m2-teal-palette, 800);
 $myapp-theme-accent: mat.m2-define-palette(mat.$m2-teal-palette, A200);
 $myapp-theme-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
+// Crie o tema usando as paletas definidas
 $myapp-theme: mat.m2-define-light-theme((
   color: (
     primary: $myapp-theme-primary,
@@ -14,15 +26,12 @@ $myapp-theme: mat.m2-define-light-theme((
   )
 ));
 
+// Inclua os temas para todos os componentes do Angular Material
 @include mat.all-component-themes($myapp-theme);
 
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+// Exponha as cores primárias do tema como variáveis CSS
+:root {
+  --myapp-primary: mat.get-color-from-palette($myapp-theme-primary);
 }
 
 .error {
