Ajustando actions das grids

--- a/src/app/cadastro/especie-produto/especie-produto.component.scss
+++ b/src/app/cadastro/especie-produto/especie-produto.component.scss
@@ -6,10 +6,10 @@
     .mat-elevation-z8 {
         button {
             border: none;
-            mat-icon {
-                color: white;
-            }
         }
+    }
+    .mat-column-star {
+        text-align: right;
     }
 }
 
