--- a/src/app/cadastro/tipo-produto/tipo-produto.component.html
+++ b/src/app/cadastro/tipo-produto/tipo-produto.component.html
@@ -29,7 +29,7 @@
           [matMenuTriggerFor]="menu"
           aria-label="Open menu"
         >
-          <mat-icon>more_vert</mat-icon>
+          <mat-icon class="mat-primary">more_vert</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
           <button mat-menu-item (click)="apagar(element)">
