--- a/src/app/estoque/estoque.component.html
+++ b/src/app/estoque/estoque.component.html
@@ -56,7 +56,7 @@
               [matMenuTriggerFor]="menu"
               aria-label="Open menu"
             >
-              <mat-icon>more_vert</mat-icon>
+              <mat-icon class="mat-primary">more_vert</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
               <button mat-menu-item (click)="transferir(element)">
