--- a/src/app/produto/incluir-estoque/incluir-estoque.component.html
+++ b/src/app/produto/incluir-estoque/incluir-estoque.component.html
@@ -14,6 +14,7 @@
           matInput
           [(ngModel)]="produtoItem.lote"
           name="produtoItem.lote"
+          (ngModelChange)="produtoItem.lote = $event.toUpperCase()"
           required
         />
       </mat-form-field>
