--- a/src/app/estoque/estoque.component.html
+++ b/src/app/estoque/estoque.component.html
@@ -63,6 +63,10 @@
                 <mat-icon>upload</mat-icon>
                 <span>Transferir</span>
               </button>
+              <button mat-menu-item (click)="visualizarHistorico(element)">
+                <mat-icon>history</mat-icon>
+                <span>Histórico item</span>
+              </button>
             </mat-menu>
           </td>
         </ng-container>
