--- a/src/app/estoque/transferir-estoque-dialog/transferir-estoque-dialog.component.html
+++ b/src/app/estoque/transferir-estoque-dialog/transferir-estoque-dialog.component.html
@@ -28,7 +28,7 @@
 
     <div class="form-fields">
       <mat-form-field appearance="outline" class="full-size">
-        <mat-label>Observacao</mat-label>
+        <mat-label>Observação</mat-label>
         <input
           color="primary"
           matInput
