--- a/src/app/estoque/estoque.component.html
+++ b/src/app/estoque/estoque.component.html
@@ -1,4 +1,3 @@
-
 <h1>Estoque Por Unidade</h1>
 
 <div class="menu-botoes">
@@ -7,9 +6,15 @@
   </button>
 </div>
 
-<div class="center-table">
+<div class="center-filter">
+  <mat-form-field appearance="outline">
+    <mat-label>Filtrar</mat-label>
+    <input matInput (keyup)="filtrar($event)" placeholder="Ex. nome do produto" #input>
+  </mat-form-field>  
+</div>
 
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="center-table">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
         <ng-container matColumnDef="id" hidden>
           <th mat-header-cell *matHeaderCellDef>ID</th>
           <td mat-cell *matCellDef="let element">{{ element.id }}</td>
@@ -18,29 +23,29 @@
         <!-- Position Column -->
         <ng-container matColumnDef="codigo">
           <th mat-header-cell *matHeaderCellDef>Código</th>
-          <td mat-cell *matCellDef="let element">{{ element.produtoItem.produto.codigo }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.codigoProduto }}</td>
         </ng-container>
     
         <!-- Name Column -->
         <ng-container matColumnDef="nome">
           <th mat-header-cell *matHeaderCellDef>Nome</th>
-          <td mat-cell *matCellDef="let element">{{ element.produtoItem.produto.nome }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.nomeProduto }}</td>
         </ng-container>
     
         <!-- Weight Column -->
         <ng-container matColumnDef="lote">
           <th mat-header-cell *matHeaderCellDef>Lote</th>
-          <td mat-cell *matCellDef="let element">{{ element.produtoItem.lote }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.lote }}</td>
         </ng-container>
     
         <ng-container matColumnDef="dataValidade">
           <th mat-header-cell *matHeaderCellDef>Validade</th>
-          <td mat-cell *matCellDef="let element">{{ element.produtoItem.dataValidade | date: 'dd/MM/yyyy' }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.dataValidade | date: 'dd/MM/yyyy' }}</td>
         </ng-container>
     
         <ng-container matColumnDef="unidade">
           <th mat-header-cell *matHeaderCellDef>Unidade</th>
-          <td mat-cell *matCellDef="let element">{{ element.unidade.nome }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.nomeUnidade }}</td>
         </ng-container>
     
         <ng-container matColumnDef="quantidade">
@@ -73,6 +78,10 @@
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">Não foi possível encontrar registros correspondente ao filtro utilizado. Filtro:"{{input.value}}"</td>
+        </tr>
       </table>
 
 </div>
