--- a/src/app/estoque/estoque.component.scss
+++ b/src/app/estoque/estoque.component.scss
@@ -18,3 +18,22 @@ h1 {
     justify-content: center;
     align-items: center;
 }
+
+.center-filter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    mat-form-field {
+        width: 100%;
+    }
+}
+
+.menu-botoes {
+    margin-bottom: 10px;
+    margin-right: 10px;
+    display: flex;
+    text-align: right;
+    justify-content: right;
+}
