Inserindo paginação na grid

--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -94,5 +94,6 @@
       <td class="mat-cell" colspan="4">Não foi possível encontrar registros correspondente ao filtro utilizado. Filtro:"{{input.value}}"</td>
     </tr>
   </table>
-
 </div>
+<br />
+<mat-paginator [pageSizeOptions]="[5, 10, 25, 50]" aria-label="Select page of users"></mat-paginator>
