--- a/src/app/estoque/estoque.component.html
+++ b/src/app/estoque/estoque.component.html
@@ -14,75 +14,74 @@
 </div>
 
 <div class="center-table">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-        <ng-container matColumnDef="id" hidden>
-          <th mat-header-cell *matHeaderCellDef>ID</th>
-          <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-        </ng-container>
-    
-        <!-- Position Column -->
-        <ng-container matColumnDef="codigo">
-          <th mat-header-cell *matHeaderCellDef>Código</th>
-          <td mat-cell *matCellDef="let element">{{ element.codigoProduto }}</td>
-        </ng-container>
-    
-        <!-- Name Column -->
-        <ng-container matColumnDef="nome">
-          <th mat-header-cell *matHeaderCellDef>Nome</th>
-          <td mat-cell *matCellDef="let element">{{ element.nomeProduto }}</td>
-        </ng-container>
-    
-        <!-- Weight Column -->
-        <ng-container matColumnDef="lote">
-          <th mat-header-cell *matHeaderCellDef>Lote</th>
-          <td mat-cell *matCellDef="let element">{{ element.lote }}</td>
-        </ng-container>
-    
-        <ng-container matColumnDef="dataValidade">
-          <th mat-header-cell *matHeaderCellDef>Validade</th>
-          <td mat-cell *matCellDef="let element">{{ element.dataValidade | date: 'dd/MM/yyyy' }}</td>
-        </ng-container>
-    
-        <ng-container matColumnDef="unidade">
-          <th mat-header-cell *matHeaderCellDef>Unidade</th>
-          <td mat-cell *matCellDef="let element">{{ element.nomeUnidade }}</td>
-        </ng-container>
-    
-        <ng-container matColumnDef="quantidade">
-          <th mat-header-cell *matHeaderCellDef>Qtd</th>
-          <td mat-cell *matCellDef="let element">{{ element.quantidade }}</td>
-        </ng-container>
-    
-        <ng-container matColumnDef="star" stickyEnd>
-          <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
-          <td mat-cell *matCellDef="let element">
-            <button
-              mat-icon-button
-              [matMenuTriggerFor]="menu"
-              aria-label="Open menu"
-            >
-              <mat-icon class="mat-primary">more_vert</mat-icon>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+      <ng-container matColumnDef="id" hidden>
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+      </ng-container>
+  
+      <!-- Position Column -->
+      <ng-container matColumnDef="codigo">
+        <th mat-header-cell *matHeaderCellDef>Código</th>
+        <td mat-cell *matCellDef="let element">{{ element.codigoProduto }}</td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <td mat-cell *matCellDef="let element">{{ element.nomeProduto }}</td>
+      </ng-container>
+  
+      <!-- Weight Column -->
+      <ng-container matColumnDef="lote">
+        <th mat-header-cell *matHeaderCellDef>Lote</th>
+        <td mat-cell *matCellDef="let element">{{ element.lote }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="dataValidade">
+        <th mat-header-cell *matHeaderCellDef>Validade</th>
+        <td mat-cell *matCellDef="let element">{{ element.dataValidade | date: 'dd/MM/yyyy' }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="unidade">
+        <th mat-header-cell *matHeaderCellDef>Unidade</th>
+        <td mat-cell *matCellDef="let element">{{ element.nomeUnidade }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="quantidade">
+        <th mat-header-cell *matHeaderCellDef>Qtd</th>
+        <td mat-cell *matCellDef="let element">{{ element.quantidade }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="star" stickyEnd>
+        <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+        <td mat-cell *matCellDef="let element">
+          <button
+            mat-icon-button
+            [matMenuTriggerFor]="menu"
+            aria-label="Open menu"
+          >
+            <mat-icon class="mat-primary">more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="transferir(element)">
+              <mat-icon>upload</mat-icon>
+              <span>Transferir</span>
             </button>
-            <mat-menu #menu="matMenu">
-              <button mat-menu-item (click)="transferir(element)">
-                <mat-icon>upload</mat-icon>
-                <span>Transferir</span>
-              </button>
-              <button mat-menu-item (click)="visualizarHistorico(element)">
-                <mat-icon>history</mat-icon>
-                <span>Histórico item</span>
-              </button>
-            </mat-menu>
-          </td>
-        </ng-container>
-    
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            <button mat-menu-item (click)="visualizarHistorico(element)">
+              <mat-icon>history</mat-icon>
+              <span>Histórico item</span>
+            </button>
+          </mat-menu>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">Não foi possível encontrar registros correspondente ao filtro utilizado. Filtro:"{{input.value}}"</td>
-        </tr>
-      </table>
-
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">Não foi possível encontrar registros correspondente ao filtro utilizado. Filtro:"{{input.value}}"</td>
+      </tr>
+    </table>
 </div>
-<mat-paginator [pageSizeOptions]="[5, 10, 25, 50]" aria-label="Select page of users"></mat-paginator>
+<mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 50]" showFirstLastButtons> </mat-paginator>
