--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -96,4 +96,4 @@
   </table>
 </div>
 <br />
-<mat-paginator [pageSizeOptions]="[5, 10, 25, 50]" aria-label="Select page of users"></mat-paginator>
+<mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 50]" showFirstLastButtons> </mat-paginator>
