--- a/src/app/produto/incluir-estoque/incluir-estoque.component.html
+++ b/src/app/produto/incluir-estoque/incluir-estoque.component.html
@@ -48,7 +48,7 @@
         />
       </mat-form-field>
       <mat-form-field appearance="outline" >
-        <mat-label>Preço compra</mat-label>
+        <mat-label>Preço compra unitário</mat-label>
         <input
           type="number"
           color="primary"
