--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -34,33 +34,33 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
       <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="marca">
-      <th mat-header-cell *matHeaderCellDef>Marca</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Marca</th>
       <td mat-cell *matCellDef="let element">{{ element.marca }}</td>
     </ng-container>
 
     <ng-container matColumnDef="lote">
-      <th mat-header-cell *matHeaderCellDef>Lote</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Lote</th>
       <td mat-cell *matCellDef="let element">{{ element.lote }}</td>
     </ng-container>
 
     <ng-container matColumnDef="estoque">
-      <th mat-header-cell *matHeaderCellDef>Estoque</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Estoque</th>
       <td mat-cell *matCellDef="let element">{{ element.estoque }}</td>
     </ng-container>
 
     <ng-container matColumnDef="quantidade">
-      <th mat-header-cell *matHeaderCellDef>Qtd</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Qtd</th>
       <td mat-cell *matCellDef="let element">{{ element.quantidade }}</td>
     </ng-container>
 
     <ng-container matColumnDef="dataValidade">
-      <th mat-header-cell *matHeaderCellDef>Validade</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Validade</th>
       <td mat-cell *matCellDef="let element">{{ element.dataValidade | date: 'dd/MM/yyyy' }}</td>
     </ng-container>
 
