Formatacao das dataas

--- a/src/app/produto/incluir-estoque/incluir-estoque.component.html
+++ b/src/app/produto/incluir-estoque/incluir-estoque.component.html
@@ -26,6 +26,7 @@
           [(ngModel)]="produtoItem.dataValidade"
           name="produtoItem.dataValidade"
           required
+          appDateMask
         />
         <mat-datepicker-toggle
           matIconSuffix
